stopped overflow?

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 /* Giving header a background color */
